[tool.poetry]
name = "nixops_virtd"
version = "1.0"
description = "NixOps plugin for virtd"
authors = ["Amine Chikhaoui <amine.chikhaoui91@gmail.com>"]
include = [ "nixops_libvirtd/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = { git = "https://github.com/NixOS/nixops.git", rev = "45256745cef246dabe1ae8a7d109988f190cd7ef" }
libvirt-python = "^7.5"

[tool.poetry.plugins."nixops"]
virtd = "nixops_virtd.plugin"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.812"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
